# panmvpa

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
ds006598-download/derivatives/afni_timing_epiproj/: PAN10_ses-6_epiproj_3col.txt
notebooks/: network_definition.ipynb  nilearn_epiproj_trials.ipynb
