[project]
name = "panmvpa"
version = "0.1.0"
description = "Exploring the benefit of precision fMRI for multivariate analysis"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "nibabel",
    "nilearn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panmvpa"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
